typography design changes

--- a/src-templates/index.html
+++ b/src-templates/index.html
@@ -18,7 +18,7 @@
                 </ul>
                 <a href="{{ site_url 'contact' }}" class="button button--large button--primary">Available for Hire</a>
                 <div class="hero__footer">
-                    <p class="p--light"><a href="{{ site_url 'about' }}">Based near Manchester, UK</a></p>
+                    <p class="p--light"><a href="{{ site_url 'about' }}">Based in Manchester, UK</a></p>
                 </div>
             </div>
             <div class="hero__image"></div>
