amp template and css

--- a/src-templates/amp.html
+++ b/src-templates/amp.html
@@ -8,13 +8,15 @@
 <style>body {opacity: 0}</style><noscript><style>body {opacity: 1}</style></noscript>
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <style amp-custom>
-{{ inline 'assets/css/combined.css' }}
+{{ inline 'assets/css/amp.css' }}
 </style>
 </head>
 <body>
 
 <header class="header" id="top" role="banner">
-    <span class="header__title"><a rel="author" href="{{ site_url }}">David Bushell</a></span>
+    <div class="block">
+        <span class="header__title"><a rel="author" href="{{ site_url }}">David Bushell</a></span>
+    </div>
 </header>
 <!--/.header-->
 
