AMP template / css

--- a/src-templates/amp.html
+++ b/src-templates/amp.html
@@ -5,6 +5,18 @@
 <title>{{ page_title }}</title>
 <link rel="canonical" href="{{ site_url canonical }}">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+<script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "BlogPosting",
+        "headline": "{{ title }}",
+        "datePublished": "{{ moment date "ISO" }}",
+        "author": {
+            "@type": "Person",
+            "name": "David Bushell"
+        }
+    }
+</script>
 <style>body {opacity: 0}</style><noscript><style>body {opacity: 1}</style></noscript>
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <style amp-custom>
