--- a/src-templates/portfolio.html
+++ b/src-templates/portfolio.html
@@ -41,12 +41,20 @@
                         <img class="folio__image" src="{{ site_url }}assets/img/portfolio/passenger.jpg" alt="Passenger Focus">
                     </a>
                 </li>
+                <li class="folio__item" style="background-color: #f05b26;">
+                    <a class="folio__link" href="{{ site_url }}2016/01/04/css-framework-for-partsgiant/">
+                        <span class="folio__label">PartsGiant</span>
+                        <img class="folio__image" src="{{ site_url }}assets/img/portfolio/partsgiant.jpg" alt="PartsGiant">
+                    </a>
+                </li>
+                <!--
                 <li class="folio__item" style="background-color: #903dcc;">
                     <a class="folio__link" href="{{ site_url }}2013/01/28/gloople-responsive-design-review/">
                         <span class="folio__label">Gloople</span>
                         <img class="folio__image" src="{{ site_url }}assets/img/portfolio/gloople.jpg" alt="Gloople">
                     </a>
                 </li>
+                -->
             </ul>
         </div>
 
@@ -105,6 +113,7 @@
             <h2>Older Website Projects</h2>
             <p>Web design and front-end development from previous agencies I’ve worked at.</p>
             <ul>
+                <li><a href="{{ site_url }}2013/01/28/gloople-responsive-design-review/">Gloople</a></li>
                 <li><a href="{{ site_url }}showcase/atherton-cox/">Atherton Cox</a></li>
                 <li><a href="{{ site_url }}showcase/brucar/">Brucar</a></li>
                 <li><a href="{{ site_url }}showcase/eden-anglo-french/">Eden Anglo French</a></li>
