"CSS Framework for PartsGiant" / contact page

--- a/src-templates/contact.html
+++ b/src-templates/contact.html
@@ -19,6 +19,7 @@
                     </li>
                     <li class="form__item">
                         <h4><strong>Have a project in mind?</strong></h4>
+                        <p>Tell me your requirements and I can provide a <strong>free quote</strong>.</p>
                         <p class="p--small">Please provide as much detail as possible — budget, requirements, timelines — so I can answer you quickly. I may be available immediately or we can book projects in advance.</p>
                         <label class="label" for="contact-enquiry">Enquiry</label>
                         <textarea class="field" id="contact-enquiry" name="enquiry" rows="5" required></textarea>
