"Services" page content

--- a/src-templates/services.html
+++ b/src-templates/services.html
@@ -2,11 +2,19 @@
 
 <main class="main main--page" role="main">
 
-    <div class="block prose post">
-        <h1 class="post__title">{{ title }}</h1>
-        <div class="post__body">
-            {{{contents}}}
+    <div class="block">
+        <div class="prose post">
+            <h1 class="post__title">{{ title }}</h1>
+            <div class="post__body">
+                {{{contents}}}
+            </div>
         </div>
+        <div class="prose post">
+            <h3>Get a free quote&hellip;</h3>
+            <p>Interested in working with me? <a href="/contact/">Send me an email</a> with your project requirements and I’ll happily provide a free quote and let you know my availability.</p>
+        </div>
+        <br>
+        <a href="/contact/" class="button">Get in Touch</a>
     </div>
 
 </main>
