--- a/src-templates/index.html
+++ b/src-templates/index.html
@@ -14,7 +14,7 @@
                 <ul class="hero__links">
                     <li><a href="{{ site_url 'responsive-design' }}">Responsive Design</a></li>
                     <li><a href="{{ site_url 'front-end-development' }}">Front-end Development</a></li>
-                    <li><a href="{{ site_url 'process-and-strategy' }}">Process &amp; Strategy</a></li>
+                    <li><a href="{{ site_url 'services' }}">All Services</a></li>
                 </ul>
                 <a href="{{ site_url 'contact' }}" class="button button--large button--primary">Available for Hire</a>
                 <div class="hero__footer">
