--- a/src-templates/services.html
+++ b/src-templates/services.html
@@ -11,10 +11,10 @@
         </div>
         <div class="prose post">
             <h3>Get a free quote&hellip;</h3>
-            <p>Interested in working with me? <a href="/contact/">Send me an email</a> with your project requirements and I’ll happily provide a free quote and let you know my availability.</p>
+            <p>Interested in working with me? <a href="{{ site_url 'contact' }}">Send me an email</a> with your project requirements and I’ll happily provide a free quote and let you know my availability.</p>
         </div>
         <br>
-        <a href="/contact/" class="button">Get in Touch</a>
+        <a href="{{ site_url 'contact' }}" class="button">Get in Touch</a>
     </div>
 
 </main>
