--- a/src-templates/index.html
+++ b/src-templates/index.html
@@ -1,7 +1,107 @@
 {{>header}}
 
-<main class="main main--home" role="main">
+<main class="main main--home home" role="main">
 
+
+    <header class="home-hero">
+        <div class="block">
+            <div class="home-hero__logo">
+                <h1>David Bushell &#8211; Web Design &amp; Front-end Development (based in Manchester, UK)</h1>
+                <img src="{{ site_url }}assets/img/david-bushell.svg" alt="David Bushell">
+                <div class="home-hero__crane"></div>
+            </div>
+        </div>
+        <div class="home-hero__bg">
+            <div>
+                <svg xmlns="http://www.w3.org/2000/svg">
+                <path class="st0" d="M3000 600H0V0z"/>
+                <path class="st1" d="M-4.5 2.5l3005 601"/>
+                <path class="st2" d="M-4.5 9.5l3005 601"/>
+                </svg>
+            </div>
+        </div>
+    </header>
+
+    <div class="block">
+        <div class="home-services">
+            <article class="home-services__item">
+                <h2 class="h4"><a href="#">Responsive Design</a></h2>
+                <p class="p--small">The number of web-accessible devices is truly a wonder of our information age. This can be a daunting canvas without a responsive approach.</p>
+                <a href="{{ site_url 'contact' }}" class="button">Available for Hire</a>
+            </article>
+            <hr>
+            <article class="home-services__item">
+                <h2 class="h4"><a href="#">Front-end Development</a></h2>
+                <p class="p--small">HTML, CSS, and JavaScript web standards evolve daily. I take every project as an opportunity to refresh my methods and hone my practice.</p>
+            </article>
+            <hr>
+            <article class="home-services__item">
+                <h2 class="h4"><a href="#">And a lot more&hellip;</a></h2>
+                <p class="p--small">I have extensive knowledge of PHP and particularly WordPress theme development. I’m also very proficient in other HTML template languages.</p>
+            </article>
+
+        </div>
+    </div>
+
+    <div class="block">
+        <div class="home-sectors">
+            <article class="home-sectors__item home-businesses">
+                <h2>Businesses</h2>
+                <p class="p--large">Have an idea?</p>
+                <p>Great design that works can’t be achieved in isolation. How does it work for your business?</p>
+                <a href="#" class="button">How I can help</a>
+            </article>
+            <article class="home-sectors__item home-agencies">
+                <h2>Web Agencies</h2>
+                <p class="p--large">Need a hand?</p>
+                <p>I’m reliable and flexible, priding myself in communication and initiative to ensure a smooth project.</p>
+                <a href="#" class="button">What I can do</a>
+            </article>
+        </div>
+    </div>
+
+
+
+
+    <div class="midtro">
+        <div class="block">
+
+            <div class="folio">
+                <ul class="folio__list">
+                    <li class="folio__item" style="background-color: #f05b26;">
+                        <a class="folio__link" href="{{ site_url }}2016/01/04/css-framework-for-partsgiant/">
+                            <span class="folio__label">PartsGiant</span>
+                            <img class="folio__image" src="{{ site_url }}assets/img/portfolio/partsgiant.jpg" alt="PartsGiant">
+                        </a>
+                    </li>
+                    <li class="folio__item" style="background-color: #d8ac59;">
+                        <a class="folio__link" href="{{ site_url }}2015/03/18/responsive-design-for-houden/">
+                            <span class="folio__label">Houden</span>
+                            <img class="folio__image" src="{{ site_url }}assets/img/portfolio/houden.jpg" alt="Houden">
+                        </a>
+                    </li>
+                    <li class="folio__item" style="background-color: #993300;">
+                        <a class="folio__link" href="{{ site_url }}2014/05/07/responsive-design-for-uwe-wittwer/">
+                            <span class="folio__label">Uwe Wittwer</span>
+                            <img class="folio__image" src="{{ site_url }}assets/img/portfolio/uwewittwer.jpg" alt="Uwe Wittwer">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="outro reversed">
+        <div class="block">
+            <div class="prose">
+                <h3>What my clients say:</h3>
+                <p><q>Highly skilled, personable, helpful and dedicated: David exceeded my expectations to deliver for us on a key project.</q></p>
+            </div>
+        </div>
+    </div>
+
+    <!--
     <div class="block hero">
         <div class="prose hero__body">
             <h1 class="h0 hero__title">
@@ -24,6 +124,7 @@
             <div class="hero__image"></div>
         </div>
     </div>
+    -->
     <!--/.hero-->
 
 </main>
