--- a/src-templates/contact.html
+++ b/src-templates/contact.html
@@ -5,7 +5,10 @@
     <div class="block prose post">
         <h1 class="post__title">{{ title }}</h1>
         <div class="post__body">
-            {{{contents}}}
+
+            <p>Need help with your website? I'm open for projects, email me:</p>
+            <p class="p--large"><b><a href="mailto:hi@dbushell.com">hi@dbushell.com</a></b></p>
+            <p>or use the form below:</p>
 
             <form class="form" id="contact-form" method="post" action="{{ site_url 'contact-submit.php' }}">
                 <ul class="form__list">
