--- a/src-templates/services.html
+++ b/src-templates/services.html
@@ -7,14 +7,13 @@
             <h1 class="post__title">{{ title }}</h1>
             <div class="post__body">
                 {{{contents}}}
+                <div class="boxed reversed">
+                    <h3>Get a free quote&hellip;</h3>
+                    <p>Interested in working with me? <a href="{{ site_url 'contact' }}">Send me an email</a> with your project requirements and I’ll happily provide a free quote and let you know my availability.</p>
+                    <a href="{{ site_url 'contact' }}" class="button">Get in Touch</a>
+                </div>
             </div>
         </div>
-        <div class="prose post">
-            <h3>Get a free quote&hellip;</h3>
-            <p>Interested in working with me? <a href="{{ site_url 'contact' }}">Send me an email</a> with your project requirements and I’ll happily provide a free quote and let you know my availability.</p>
-        </div>
-        <br>
-        <a href="{{ site_url 'contact' }}" class="button">Get in Touch</a>
     </div>
 
 </main>
