--- a/src-templates/index.html
+++ b/src-templates/index.html
@@ -29,7 +29,7 @@
     <div class="block">
         <div class="home-services">
             <article class="home-services__item">
-                <h2 class="h4"><a href="{{ site_url 'responsive-design' }}">Responsive Design</a></h2>
+                <h2 class="h4"><a href="{{ site_url 'responsive-design' }}">Responsive Web Design</a></h2>
                 <p>I design websites that work across all devices. They’re fluid and adaptive, just like my process.</p>
                 <a href="{{ site_url 'contact' }}" class="button">Available for Hire</a>
             </article>
