--- a/src-templates/service-cms.html
+++ b/src-templates/service-cms.html
@@ -20,6 +20,7 @@
                     <a href="{{ site_url }}process-and-strategy/">Process and strategy</a>
                 </li>
             </ul>
+            {{>cta-quote}}
         </div>
     </div>
 
