--- a/src-templates/service-development.html
+++ b/src-templates/service-development.html
@@ -20,6 +20,7 @@
                     <a href="{{ site_url }}wordpress-and-cms-integration/">WordPress &amp; CMS integration</a>
                 </li>
             </ul>
+            {{>cta-quote}}
         </div>
     </div>
 
