--- a/src-templates/service-development.html
+++ b/src-templates/service-development.html
@@ -5,7 +5,9 @@
     <div class="block prose post">
         <h1 class="post__title">{{ title }}</h1>
         <div class="post__body">
-            <p class="post__image post__image--centred"><img src="{{ site_url }}assets/img/front-end-development.png" alt="Responsive Design on Google Chrome and an iPhone"></p>
+            <p class="post__image post__image--centred">
+                <img src="/assets/img/dbushell-website.svg" alt="dbushell.com front-end development">
+            </p>
             {{{ contents }}}
             <hr>
             <h2>I also do&hellip;</h2>
