design and content updates v8

--- a/src-templates/contact.html
+++ b/src-templates/contact.html
@@ -6,7 +6,7 @@
         <h1 class="post__title">{{ title }}</h1>
         <div class="post__body">
 
-            <p>Need help with your website? I'm open for projects, email me:</p>
+            <p>Need help with your website?</p>
             <p class="p--large"><b><a href="mailto:hi@dbushell.com">hi@dbushell.com</a></b></p>
             <p>or use the form below:</p>
 
@@ -22,8 +22,7 @@
                     </li>
                     <li class="form__item">
                         <h4><strong>Have a project in mind?</strong></h4>
-                        <p>Tell me your requirements and I can provide a <strong>free quote</strong>.</p>
-                        <p class="p--small">Please provide as much detail as possible — budget, requirements, timelines — so I can answer you quickly. I may be available immediately or we can book projects in advance.</p>
+                        <p class="p--small">I can provide a <b>free quote.</b> Please provide as much detail as possible — budget, requirements, timelines — so I can answer you quickly. I may be available immediately or we can book in advance.</p>
                         <label class="label" for="contact-enquiry">Enquiry</label>
                         <textarea class="field" id="contact-enquiry" name="enquiry" rows="5" required></textarea>
                     </li>
