--- a/src-templates/service-development.html
+++ b/src-templates/service-development.html
@@ -6,7 +6,7 @@
         <h1 class="post__title">{{ title }}</h1>
         <div class="post__body">
             <p class="post__image post__image--centred">
-                <img src="/assets/img/dbushell-website.svg" alt="dbushell.com front-end development">
+                <img src="/assets/img/dbushell-website.svg" alt="dbushell.com front-end development" style="width:500px;">
             </p>
             {{{ contents }}}
             <hr>
