--- a/src-templates/services.html
+++ b/src-templates/services.html
@@ -2,13 +2,11 @@
 
 <main class="main main--page" role="main">
 
-    <div class="block">
-        <div class="prose post">
-            <h1 class="post__title">{{ title }}</h1>
-            <div class="post__body">
-                {{{contents}}}
-                {{>cta-quote}}
-            </div>
+    <div class="block prose post">
+        <h1 class="post__title">{{ title }}</h1>
+        <div class="post__body">
+            {{{contents}}}
+            {{>cta-quote}}
         </div>
     </div>
 
