move contact submission

--- a/src-templates/contact.html
+++ b/src-templates/contact.html
@@ -10,7 +10,7 @@
             <p class="p--large"><b><a href="mailto:hi@dbushell.com">hi@dbushell.com</a></b></p>
             <p>or use the form below:</p>
 
-            <form class="form" id="contact-form" method="post" action="{{ site_url 'contact-submit.php' }}">
+            <form class="form" id="contact-form" method="post" action="{{ site_url 'contact/submit' }}">
                 <ul class="form__list">
                     <li class="form__item">
                         <label class="label" for="contact-name">Name</label>
