--- a/src-templates/amp.html
+++ b/src-templates/amp.html
@@ -5,22 +5,33 @@
 <title>{{ page_title }}</title>
 <link rel="canonical" href="{{ site_url canonical }}">
 <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-<!--
 <script type="application/ld+json">
-    {
-        "@context": "http://schema.org",
-        "@type": "BlogPosting",
-        "headline": "{{ title }}",
-        "datePublished": "{{ moment date "ISO" }}",
-        "author": {
-            "@type": "Person",
-            "name": "David Bushell"
-        }
+{
+  "@context": "http://schema.org",
+  "@type": "BlogPosting",
+  "mainEntityOfPage": "{{ site_url canonical }}",
+  "headline": "{{ title }}",
+  "datePublished": "{{ moment date "ISO" }}",
+  "dateModified": "{{ moment null "ISO" }}",
+  "author": {
+    "@type": "Person",
+    "name": "David Bushell"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "dbushell.com",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "{{ site_url }}assets/img/amp-dbushell-logo.png",
+      "width": 135,
+      "height": 60
     }
+  }
+}
 </script>
--->
-<style>body {opacity: 0}</style><noscript><style>body {opacity: 1}</style></noscript>
 <script async src="https://cdn.ampproject.org/v0.js"></script>
+<style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
+<noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
 <style amp-custom>
 {{ inline 'assets/css/amp.css' }}{{{ ampimgcss }}}
 </style>
