add AMP image Schema

--- a/src-templates/amp.html
+++ b/src-templates/amp.html
@@ -26,6 +26,12 @@
       "width": 135,
       "height": 60
     }
+  },
+  "image": {
+    "@type": "ImageObject",
+    "url": "{{ site_url }}images/amp/{{ moment date "YYYY-MM-DD" }}-{{ slug }}.png",
+    "width": 720,
+    "height": 480
   }
 }
 </script>
