--- a/src-templates/portfolio.html
+++ b/src-templates/portfolio.html
@@ -11,10 +11,10 @@
 
         <div class="folio">
             <ul class="folio__list">
-                <li class="folio__item" style="background-color: #f05b26;">
-                    <a class="folio__link" href="{{ site_url }}2016/01/04/css-framework-for-partsgiant/">
-                        <span class="folio__label">PartsGiant</span>
-                        <img class="folio__image" src="{{ site_url }}assets/img/portfolio/partsgiant.jpg" alt="PartsGiant">
+                <li class="folio__item" style="background-color: #29313d;">
+                    <a class="folio__link" href="{{ site_url }}2016/07/14/wordpress-theme-emma-leicester/">
+                        <span class="folio__label">Emma Leicester</span>
+                        <img class="folio__image" src="{{ site_url }}assets/img/portfolio/eleicester.png" alt="Emma Leicester by Base Creative, London">
                     </a>
                 </li>
                 <li class="folio__item" style="background-color: #d8ac59;">
@@ -35,19 +35,25 @@
                         <img class="folio__image" src="{{ site_url }}assets/img/portfolio/kings.jpg" alt="King’s Transfer">
                     </a>
                 </li>
+                <li class="folio__item" style="background-color: #f05b26;">
+                    <a class="folio__link" href="{{ site_url }}2016/01/04/css-framework-for-partsgiant/">
+                        <span class="folio__label">PartsGiant</span>
+                        <img class="folio__image" src="{{ site_url }}assets/img/portfolio/partsgiant.jpg" alt="PartsGiant">
+                    </a>
+                </li>
                 <li class="folio__item" style="background-color: #5798da;">
                     <a class="folio__link" href="{{ site_url }}2014/02/17/introducing-tales/">
                         <span class="folio__label">Tales</span>
                         <img class="folio__image" src="{{ site_url }}assets/img/portfolio/tales.jpg" alt="Tales">
                     </a>
                 </li>
+                <!--
                 <li class="folio__item" style="background-color: #ea132b;">
                     <a class="folio__link" href="{{ site_url }}2012/06/17/passenger-focus-responsive-web-design-case-study/">
                         <span class="folio__label">Passenger Focus</span>
                         <img class="folio__image" src="{{ site_url }}assets/img/portfolio/passenger.jpg" alt="Passenger Focus">
                     </a>
                 </li>
-                <!--
                 <li class="folio__item" style="background-color: #903dcc;">
                     <a class="folio__link" href="{{ site_url }}2013/01/28/gloople-responsive-design-review/">
                         <span class="folio__label">Gloople</span>
@@ -113,6 +119,7 @@
             <h2>Older Website Projects</h2>
             <p>Web design and front-end development from previous agencies I’ve worked at.</p>
             <ul>
+                <li><a href="{{ site_url }}2012/06/17/passenger-focus-responsive-web-design-case-study/">Passenger Focus</a></li>
                 <li><a href="{{ site_url }}2013/01/28/gloople-responsive-design-review/">Gloople</a></li>
                 <li><a href="{{ site_url }}showcase/atherton-cox/">Atherton Cox</a></li>
                 <li><a href="{{ site_url }}showcase/brucar/">Brucar</a></li>
