blog "Building a WordPress Theme"

--- a/src-templates/portfolio.html
+++ b/src-templates/portfolio.html
@@ -12,9 +12,9 @@
         <div class="folio">
             <ul class="folio__list">
                 <li class="folio__item" style="background-color: #29313d;">
-                    <a class="folio__link" href="{{ site_url }}2016/07/14/wordpress-theme-emma-leicester/">
-                        <span class="folio__label">Emma Leicester</span>
-                        <img class="folio__image" src="{{ site_url }}assets/img/portfolio/eleicester.png" alt="Emma Leicester by Base Creative, London">
+                    <a class="folio__link" href="{{ site_url }}2016/07/14/building-a-wordpress-theme/">
+                        <span class="folio__label">Base Creative / WordPress</span>
+                        <img class="folio__image" src="{{ site_url }}assets/img/portfolio/bcwordpress.png" alt="Building a WordPress Theme designed by Base Creative, London">
                     </a>
                 </li>
                 <li class="folio__item" style="background-color: #d8ac59;">
