"building a shopify theme" portfolio article

--- a/src-templates/portfolio.html
+++ b/src-templates/portfolio.html
@@ -29,10 +29,10 @@
                         <img class="folio__image" src="{{ site_url }}assets/img/portfolio/uwewittwer.jpg" alt="Uwe Wittwer">
                     </a>
                 </li>
-                <li class="folio__item" style="background-color: #e5a82e;">
-                    <a class="folio__link" href="{{ site_url }}2013/08/09/responsive-design-for-kings-transfer/">
-                        <span class="folio__label">King’s Transfer</span>
-                        <img class="folio__image" src="{{ site_url }}assets/img/portfolio/kings.jpg" alt="King’s Transfer">
+                <li class="folio__item" style="background-color: #b72817;">
+                    <a class="folio__link" href="{{ site_url }}2016/10/03/building-a-shopify-theme/">
+                        <span class="folio__label">Shopify Theme</span>
+                        <img class="folio__image" src="{{ site_url }}assets/img/portfolio/stshopify.png" alt="Building a Shopify Theme">
                     </a>
                 </li>
                 <li class="folio__item" style="background-color: #f05b26;">
@@ -48,6 +48,12 @@
                     </a>
                 </li>
                 <!--
+                <li class="folio__item" style="background-color: #e5a82e;">
+                    <a class="folio__link" href="{{ site_url }}2013/08/09/responsive-design-for-kings-transfer/">
+                        <span class="folio__label">King’s Transfer</span>
+                        <img class="folio__image" src="{{ site_url }}assets/img/portfolio/kings.jpg" alt="King’s Transfer">
+                    </a>
+                </li>
                 <li class="folio__item" style="background-color: #ea132b;">
                     <a class="folio__link" href="{{ site_url }}2012/06/17/passenger-focus-responsive-web-design-case-study/">
                         <span class="folio__label">Passenger Focus</span>
@@ -119,6 +125,7 @@
             <h2>Older Website Projects</h2>
             <p>Web design and front-end development from previous agencies I’ve worked at.</p>
             <ul>
+                <li><a href="{{ site_url }}2013/08/09/responsive-design-for-kings-transfer/">King's Transfer</a></li>
                 <li><a href="{{ site_url }}2012/06/17/passenger-focus-responsive-web-design-case-study/">Passenger Focus</a></li>
                 <li><a href="{{ site_url }}2013/01/28/gloople-responsive-design-review/">Gloople</a></li>
                 <li><a href="{{ site_url }}showcase/atherton-cox/">Atherton Cox</a></li>
