end of year message

--- a/src-templates/contact.html
+++ b/src-templates/contact.html
@@ -6,6 +6,8 @@
         <h1 class="post__title">{{ title }}</h1>
         <div class="post__body">
 
+            <p class="p--large">I'm booked up for the rest of the year, but please do get in touch for 2017!<strong></strong></p>
+            <hr>
             <p>Need help with your website?</p>
             <p class="p--large"><b><a href="mailto:hi@dbushell.com">hi@dbushell.com</a></b></p>
             <p>or use the form below:</p>
@@ -29,6 +31,9 @@
                     <li class="form__item" style="border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px;">
                         <label class="label" for="contact-human">If you’re human leave this field blank</label>
                         <input type="text" class="field" id="contact-human" name="human">
+                    </li>
+                    <li class="form__item">
+                        <p><strong>p.s. I’ll be out of office for most of December so expect a reply in the new year :)</strong></p>
                     </li>
                     <li class="form__item">
                         <input type="submit" class="button" value="Send Message">
